test/integration/good/tuples/tuple-foreach.stan
transformed data {
    array[100] tuple(real, real) arr;
    for (t in arr) {
    }
}
