test/integration/bad/data_index/non_data_index5.stan
parameters {
  array[3] real y;

}
transformed parameters {
  matrix[2, size(y)] m;

}
